[metadata]
name = zucker
version = 0.1.0
author = iWelt AG
description = A straightforward, Pythonic interface for the SugarCRM API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iWeltAG/zucker
project_urls =
    Bug Tracker = https://github.com/iWeltAG/zucker/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
include=zucker
exclude=tests
